Fixed helper clone appearing behind canvas

--- a/css/styles.less
+++ b/css/styles.less
@@ -177,9 +177,10 @@ h1 {
 }
 #accordion-resizer {
   width:180px;
-  height:400px;
+  height:auto;
   margin-top:10px;
 }
+
 .room {
   .border-radius(4px);
   padding: 5px;
@@ -198,7 +199,6 @@ h1 {
   width:60px;
   height:40px;
   position:relative;
-  z-index:2;
 }
 .well {
   margin-bottom: 5px;
